add signout function
